<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailMainLayout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:contentDescription="@string/wifi_off_desc"
            android:src="@drawable/wifi_off_svgrepo_com"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_connection_message"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="4dp" />

        <TextView
            android:id="@+id/error_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_internet"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:gravity="center"
            android:padding="4dp" />

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/refresh"
            android:textColor="@color/white"
            android:backgroundTint="@color/water"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textSize="16sp"
            android:drawablePadding="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
